--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,12 @@
         android:id="@+id/load_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:load_clickable="false"
+        app:load_current_status="undo"
+        app:load_empty_clickable="true"
         app:load_image_height="100dp"
         app:load_image_width="100dp"
         app:load_loading_height="100dp"
-        app:load_loading_width="100dp"
-        app:load_current_status="undo"/>
+        app:load_loading_width="100dp" />
 
 </FrameLayout>
